[package]
name = "async-client-hello-callback"
version = "0.1.0"
authors = ["AWS s2n"]
edition = "2021"

[dependencies]
s2n-quic = { version = "1", path = "../../quic/s2n-quic", features = ["provider-tls-s2n", "unstable_client_hello"]}
s2n-quic-tls = { path = "../../quic/s2n-quic-tls", features = ["unstable_private_key"] }
pin-project = { version = "1" }
openssl = { version = "0.10" }
tokio = { version = "1", features = ["full"] }
moka = "0.9"
rand = "0.8"

[workspace]
members = ["."]
