[package]
name = "s2n-quic-mc"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
humantime = "2"
once_cell = "1"
rand = "0.8"
rayon = "1"
s2n-quic = { path = "../s2n-quic", features = ["unstable-provider-io-testing", "provider-event-tracing"] }
s2n-quic-core = { path = "../s2n-quic-core", features = ["testing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
